--- a/_posts/2017-12-18-矩阵求导.markdown
+++ b/_posts/2017-12-18-矩阵求导.markdown
@@ -121,7 +121,7 @@ $$
 
 $$
 \begin{equation}
-    \mathrm{boldsymbol}(\boldsymbol{X}) = [\boldsymbol{X}_{11}, \ldots, \boldsymbol{X}_{m1}, \boldsymbol{X}_{12}, \ldots, \boldsymbol{X}_{m2}, \ldots, \boldsymbol{X}_{1n}, \ldots, \boldsymbol{X}_{mn}]^T(mn\times1),
+    \mathrm{vec}(\boldsymbol{X}) = [\boldsymbol{X}_{11}, \ldots, \boldsymbol{X}_{m1}, \boldsymbol{X}_{12}, \ldots, \boldsymbol{X}_{m2}, \ldots, \boldsymbol{X}_{1n}, \ldots, \boldsymbol{X}_{mn}]^T(mn\times1),
 \end{equation}
 $$
 
@@ -129,52 +129,52 @@ $$
 
 $$
 \begin{equation}
-    \frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}} = \frac{\partial \mathrm{boldsymbol}(\boldsymbol{F})}{\partial \mathrm{boldsymbol}(\boldsymbol{X})}(mn\times pq).
+    \frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}} = \frac{\partial \mathrm{vec}(\boldsymbol{F})}{\partial \mathrm{vec}(\boldsymbol{X})}(mn\times pq).
 \end{equation}
 $$
 
-导数与微分有联系 $$\mathrm{boldsymbol}(\mathrm{d}\boldsymbol{F}) = \frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}}^T \mathrm{boldsymbol}(\mathrm{d}\boldsymbol{X})$$。几点说明如下：
+导数与微分有联系 $$\mathrm{vec}(\mathrm{d}\boldsymbol{F}) = \frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}}^T \mathrm{vec}(\mathrm{d}\boldsymbol{X})$$。几点说明如下：
 
-- 按此定义，标量 $$f$$ 对矩阵 $$\boldsymbol{X}(m\times n)$$ 的导数 $$\frac{\partial f}{\partial \boldsymbol{X}}$$ 是 $$mn\times1$$ 向量，与上篇的定义不兼容，不过二者容易相互转换。为避免混淆，我们用 $$\nabla_{\boldsymbol{X}} f$$ 表示上篇定义的 $$m\times n$$ 矩阵，则有 $$\frac{\partial f}{\partial \boldsymbol{X}}=\mathrm{boldsymbol}(\nabla_{\boldsymbol{X}} f)$$。虽然本篇的技术可以用于标量对矩阵求导这种特殊情况，但使用上篇中的技术更方便。读者可以通过上篇中的算例试验两种方法的等价转换；
+- 按此定义，标量 $$f$$ 对矩阵 $$\boldsymbol{X}(m\times n)$$ 的导数 $$\frac{\partial f}{\partial \boldsymbol{X}}$$ 是 $$mn\times1$$ 向量，与上篇的定义不兼容，不过二者容易相互转换。为避免混淆，我们用 $$\nabla_{\boldsymbol{X}} f$$ 表示上篇定义的 $$m\times n$$ 矩阵，则有 $$\frac{\partial f}{\partial \boldsymbol{X}}=\mathrm{vec}(\nabla_{\boldsymbol{X}} f)$$。虽然本篇的技术可以用于标量对矩阵求导这种特殊情况，但使用上篇中的技术更方便。读者可以通过上篇中的算例试验两种方法的等价转换；
 - 标量对矩阵的二阶导数，又称 Hessian 矩阵，定义为 $$\nabla^2_{\boldsymbol{X}} f = \frac{\partial^2 f}{\partial \boldsymbol{X}^2} = \frac{\partial \nabla_{\boldsymbol{X}} f}{\partial \boldsymbol{X}}(mn\times mn)$$，是对称矩阵。对向量 $$\frac{\partial f}{\partial \boldsymbol{X}}$$ 或矩阵 $$\nabla_{\boldsymbol{X}} f$$ 求导都可以得到 Hessian 矩阵，但从矩阵 $$\nabla_{\boldsymbol{X}} f$$ 出发更方便；
-- $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}} = \frac{\partial\mathrm{boldsymbol} (\boldsymbol{F})}{\partial \boldsymbol{X}} = \frac{\partial \boldsymbol{F}}{\partial \mathrm{boldsymbol}(\boldsymbol{X})} = \frac{\partial\mathrm{boldsymbol}(\boldsymbol{F})}{\partial \mathrm{boldsymbol}(\boldsymbol{X})}$$，求导时矩阵被向量化，弊端是这在一定程度破坏了矩阵的结构，会导致结果变得形式复杂；好处是多元微积分中关于梯度、Hessian 矩阵的结论可以沿用过来，只需将矩阵向量化。例如优化问题中，牛顿法的更新 $$\Delta \boldsymbol{X}$$，满足 $$\mathrm{boldsymbol}(\Delta \boldsymbol{X}) = -(\nabla^2_{\boldsymbol{X}} f)^{-1}\mathrm{boldsymbol}(\nabla_{\boldsymbol{X}} f)$$；
+- $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}} = \frac{\partial\mathrm{vec} (\boldsymbol{F})}{\partial \boldsymbol{X}} = \frac{\partial \boldsymbol{F}}{\partial \mathrm{vec}(\boldsymbol{X})} = \frac{\partial\mathrm{vec}(\boldsymbol{F})}{\partial \mathrm{vec}(\boldsymbol{X})}$$，求导时矩阵被向量化，弊端是这在一定程度破坏了矩阵的结构，会导致结果变得形式复杂；好处是多元微积分中关于梯度、Hessian 矩阵的结论可以沿用过来，只需将矩阵向量化。例如优化问题中，牛顿法的更新 $$\Delta \boldsymbol{X}$$，满足 $$\mathrm{vec}(\Delta \boldsymbol{X}) = -(\nabla^2_{\boldsymbol{X}} f)^{-1}\mathrm{vec}(\nabla_{\boldsymbol{X}} f)$$；
 - 在资料中，矩阵对矩阵的导数还有其它定义，比如 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}} = \left[\frac{\partial \boldsymbol{F}_{kl}}{\partial \boldsymbol{X}}\right](mp\times nq)$$，它能兼容上篇中的标量对矩阵导数的定义，但微分与导数的联系（$$\mathrm{d}\boldsymbol{F}$$ 等于 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}}$$ 中每个 $$m\times n$$ 子块分别与 $$\mathrm{d}\boldsymbol{X}$$ 做内积）不够简明，不便于计算和应用。
 
-然后来建立运算法则。仍然要利用导数与微分的联系 $$\mathrm{boldsymbol}(\mathrm{d}\boldsymbol{F}) = \frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}}^T \mathrm{boldsymbol}(\mathrm{d}\boldsymbol{X})$$，求微分的方法与上篇相同，而从微分得到导数需要一些向量化的技巧：
+然后来建立运算法则。仍然要利用导数与微分的联系 $$\mathrm{vec}(\mathrm{d}\boldsymbol{F}) = \frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}}^T \mathrm{vec}(\mathrm{d}\boldsymbol{X})$$，求微分的方法与上篇相同，而从微分得到导数需要一些向量化的技巧：
 
-- 线性：$$\mathrm{boldsymbol}(\boldsymbol{A}+\boldsymbol{B}) = \mathrm{boldsymbol}(\boldsymbol{A}) + \mathrm{boldsymbol}(\boldsymbol{B})$$；
-- 矩阵乘法：$$\mathrm{boldsymbol}(\boldsymbol{AXB}) = (\boldsymbol{B}^T \otimes \boldsymbol{A}) \mathrm{boldsymbol}(\boldsymbol{X})$$，其中 $$\otimes$$ 表示 Kronecker 积，$$\boldsymbol{A}(m\times n)$$ 与 $$\boldsymbol{B}(p\times q)$$ 的 Kronecker 积是 $$\boldsymbol{A}\otimes \boldsymbol{B} = [\boldsymbol{A}_{ij}\boldsymbol{B}](mp\times nq)$$。此式证明见张贤达《矩阵分析与应用》第 107-108 页；
-- 转置：$$\mathrm{boldsymbol}(\boldsymbol{A}^T) = \boldsymbol{K}_{mn}\mathrm{boldsymbol}(\boldsymbol{A})$$，$$\boldsymbol{A}$$ 是 $$m\times n$$ 矩阵，其中 $$\boldsymbol{K}_{mn}(mn\times mn)$$ 是交换矩阵(commutation matrix)；
-- 逐元素乘法：$$\mathrm{boldsymbol}(\boldsymbol{A}\odot \boldsymbol{X}) = \mathrm{diag}(\boldsymbol{A})\mathrm{boldsymbol}(\boldsymbol{X})$$，其中 $$\mathrm{diag}(\boldsymbol{A})(mn\times mn)$$ 是用 $$A$$ 的元素（按列优先）排成的对角阵。
+- 线性：$$\mathrm{vec}(\boldsymbol{A}+\boldsymbol{B}) = \mathrm{vec}(\boldsymbol{A}) + \mathrm{vec}(\boldsymbol{B})$$；
+- 矩阵乘法：$$\mathrm{vec}(\boldsymbol{AXB}) = (\boldsymbol{B}^T \otimes \boldsymbol{A}) \mathrm{vec}(\boldsymbol{X})$$，其中 $$\otimes$$ 表示 Kronecker 积，$$\boldsymbol{A}(m\times n)$$ 与 $$\boldsymbol{B}(p\times q)$$ 的 Kronecker 积是 $$\boldsymbol{A}\otimes \boldsymbol{B} = [\boldsymbol{A}_{ij}\boldsymbol{B}](mp\times nq)$$。此式证明见张贤达《矩阵分析与应用》第 107-108 页；
+- 转置：$$\mathrm{vec}(\boldsymbol{A}^T) = \boldsymbol{K}_{mn}\mathrm{vec}(\boldsymbol{A})$$，$$\boldsymbol{A}$$ 是 $$m\times n$$ 矩阵，其中 $$\boldsymbol{K}_{mn}(mn\times mn)$$ 是交换矩阵(commutation matrix)；
+- 逐元素乘法：$$\mathrm{vec}(\boldsymbol{A}\odot \boldsymbol{X}) = \mathrm{diag}(\boldsymbol{A})\mathrm{vec}(\boldsymbol{X})$$，其中 $$\mathrm{diag}(\boldsymbol{A})(mn\times mn)$$ 是用 $$A$$ 的元素（按列优先）排成的对角阵。
 
-观察一下可以断言，若矩阵函数 $$\boldsymbol{F}$$ 是矩阵 $$\boldsymbol{X}$$ 经加减乘法、行列式、逆、逐元素函数等运算构成，则使用相应的运算法则对 $$\boldsymbol{F}$$ 求微分，再做向量化并使用技巧将其它项交换至 $$\mathrm{boldsymbol}(\mathrm{d}\boldsymbol{X})$$  左侧，即能得到导数。
+观察一下可以断言，若矩阵函数 $$\boldsymbol{F}$$ 是矩阵 $$\boldsymbol{X}$$ 经加减乘法、行列式、逆、逐元素函数等运算构成，则使用相应的运算法则对 $$\boldsymbol{F}$$ 求微分，再做向量化并使用技巧将其它项交换至 $$\mathrm{vec}(\mathrm{d}\boldsymbol{X})$$  左侧，即能得到导数。
 
-再谈一谈复合：假设已求得 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{Y}}$$，而 $$\boldsymbol{Y}$$ 是 $$\boldsymbol{X}$$ 的函数，如何求 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}}$$ 呢？从导数与微分的联系入手，$$\mathrm{boldsymbol}(\mathrm{d}\boldsymbol{F}) = \frac{\partial \boldsymbol{F}}{\partial Y}^T\mathrm{boldsymbol}(\mathrm{d}\boldsymbol{Y}) = \frac{\partial \boldsymbol{F}}{\partial \boldsymbol{Y}}^T\frac{\partial \boldsymbol{Y}}{\partial \boldsymbol{X}}^T\mathrm{boldsymbol}(\mathrm{d}\boldsymbol{X})$$，可以推出链式法则 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}} = \frac{\partial \boldsymbol{Y}}{\partial \boldsymbol{X}}\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{Y}}$$。
+再谈一谈复合：假设已求得 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{Y}}$$，而 $$\boldsymbol{Y}$$ 是 $$\boldsymbol{X}$$ 的函数，如何求 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}}$$ 呢？从导数与微分的联系入手，$$\mathrm{vec}(\mathrm{d}\boldsymbol{F}) = \frac{\partial \boldsymbol{F}}{\partial Y}^T\mathrm{vec}(\mathrm{d}\boldsymbol{Y}) = \frac{\partial \boldsymbol{F}}{\partial \boldsymbol{Y}}^T\frac{\partial \boldsymbol{Y}}{\partial \boldsymbol{X}}^T\mathrm{vec}(\mathrm{d}\boldsymbol{X})$$，可以推出链式法则 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}} = \frac{\partial \boldsymbol{Y}}{\partial \boldsymbol{X}}\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{Y}}$$。
 
 和标量对矩阵的导数相比，矩阵对矩阵的导数形式更加复杂，从不同角度出发常会得到形式不同的结果。有一些 Kronecker 积和交换矩阵相关的恒等式，可用来做等价变形：
 
 - $$(\boldsymbol{A}\otimes \boldsymbol{B})^T = \boldsymbol{A}^T \otimes \boldsymbol{B}^T$$；
-- $$\mathrm{boldsymbol}(\boldsymbol{ab}^T) = \boldsymbol{b}\otimes\boldsymbol{a}$$；
+- $$\mathrm{vec}(\boldsymbol{ab}^T) = \boldsymbol{b}\otimes\boldsymbol{a}$$；
 - $$(\boldsymbol{A}\otimes \boldsymbol{B})(\boldsymbol{C}\otimes \boldsymbol{D}) = (\boldsymbol{AC})\otimes (\boldsymbol{BD})$$。可以对 $$\boldsymbol{F} = \boldsymbol{D}^T\boldsymbol{B}^T\boldsymbol{XAC}$$ 求导来证明，一方面，直接求导得到 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}} = (\boldsymbol{AC}) \otimes (\boldsymbol{BD})$$；另一方面，引入 $$\boldsymbol{Y} = \boldsymbol{B}^T\boldsymbol{XA}$$，有 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{Y}} = \boldsymbol{C} \otimes \boldsymbol{D}$$，$$\frac{\partial \boldsymbol{Y}}{\partial \boldsymbol{X}} = \boldsymbol{A} \otimes \boldsymbol{B}$$，用链式法则得到 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}} = (\boldsymbol{A}\otimes \boldsymbol{B})(\boldsymbol{C} \otimes \boldsymbol{D})$$；
 - $$\boldsymbol{K}_{mn} = \boldsymbol{K}_{nm}^T, \boldsymbol{K}_{mn}\boldsymbol{K}_{nm} = \boldsymbol{I}$$；
-- $$\boldsymbol{K}_{pm}(\boldsymbol{A}\otimes \boldsymbol{B}) \boldsymbol{K}_{nq} = \boldsymbol{B}\otimes \boldsymbol{A}$$，$$\boldsymbol{A}$$ 是 $$m\times n$$ 矩阵，$$\boldsymbol{B}$$ 是 $$p\times q$$ 矩阵。可以对 $$\boldsymbol{AXB}^T$$ 做向量化来证明，一方面，$$\mathrm{boldsymbol}(\boldsymbol{AXB}^T) = (\boldsymbol{B}\otimes \boldsymbol{A})\mathrm{boldsymbol}(\boldsymbol{X})$$；另一方面，$$\mathrm{boldsymbol}(\boldsymbol{AXB}^T) = \boldsymbol{K}_{pm}\mathrm{boldsymbol}(\boldsymbol{BX}^T\boldsymbol{A}^T) = \boldsymbol{K}_{pm}(\boldsymbol{A}\otimes \boldsymbol{B})\mathrm{boldsymbol}(\boldsymbol{X}^T) = \boldsymbol{K}_{pm}(\boldsymbol{A}\otimes \boldsymbol{B}) \boldsymbol{K}_{nq}\mathrm{boldsymbol}(\boldsymbol{X})$$。
+- $$\boldsymbol{K}_{pm}(\boldsymbol{A}\otimes \boldsymbol{B}) \boldsymbol{K}_{nq} = \boldsymbol{B}\otimes \boldsymbol{A}$$，$$\boldsymbol{A}$$ 是 $$m\times n$$ 矩阵，$$\boldsymbol{B}$$ 是 $$p\times q$$ 矩阵。可以对 $$\boldsymbol{AXB}^T$$ 做向量化来证明，一方面，$$\mathrm{vec}(\boldsymbol{AXB}^T) = (\boldsymbol{B}\otimes \boldsymbol{A})\mathrm{vec}(\boldsymbol{X})$$；另一方面，$$\mathrm{vec}(\boldsymbol{AXB}^T) = \boldsymbol{K}_{pm}\mathrm{vec}(\boldsymbol{BX}^T\boldsymbol{A}^T) = \boldsymbol{K}_{pm}(\boldsymbol{A}\otimes \boldsymbol{B})\mathrm{vec}(\boldsymbol{X}^T) = \boldsymbol{K}_{pm}(\boldsymbol{A}\otimes \boldsymbol{B}) \boldsymbol{K}_{nq}\mathrm{vec}(\boldsymbol{X})$$。
 
 接下来演示一些算例。
 
 **例1**：$$\boldsymbol{F} = \boldsymbol{AX}$$，$$\boldsymbol{X}$$ 是 $$m\times n$$ 矩阵，求 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}}$$。
 
-解：先求微分：$$\mathrm{d}\boldsymbol{F}=\boldsymbol{A}\mathrm{d}\boldsymbol{X}$$，再做向量化，使用矩阵乘法的技巧，注意在 $$\mathrm{d}\boldsymbol{X}$$ 右侧添加单位阵：$$\mathrm{boldsymbol}(\mathrm{d}\boldsymbol{F}) = \mathrm{boldsymbol}(\boldsymbol{A}\mathrm{d}\boldsymbol{X}) = (\boldsymbol{I}_n\otimes \boldsymbol{A})\mathrm{boldsymbol}(\mathrm{d}\boldsymbol{X})$$，对照导数与微分的联系得到 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}} = \boldsymbol{I}_n\otimes \boldsymbol{A}^T$$。
+解：先求微分：$$\mathrm{d}\boldsymbol{F}=\boldsymbol{A}\mathrm{d}\boldsymbol{X}$$，再做向量化，使用矩阵乘法的技巧，注意在 $$\mathrm{d}\boldsymbol{X}$$ 右侧添加单位阵：$$\mathrm{vec}(\mathrm{d}\boldsymbol{F}) = \mathrm{vec}(\boldsymbol{A}\mathrm{d}\boldsymbol{X}) = (\boldsymbol{I}_n\otimes \boldsymbol{A})\mathrm{vec}(\mathrm{d}\boldsymbol{X})$$，对照导数与微分的联系得到 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}} = \boldsymbol{I}_n\otimes \boldsymbol{A}^T$$。
 
 特例：如果 $$\boldsymbol{X}$$ 退化为向量，$$\boldsymbol{f} = \boldsymbol{A} \boldsymbol{x}$$，则根据向量的导数与微分的关系 $$\mathrm{d}\boldsymbol{f} = \frac{\partial \boldsymbol{f}}{\partial \boldsymbol{x}}^T \mathrm{d}\boldsymbol{x}$$，得到  $$\frac{\partial \boldsymbol{f}}{\partial \boldsymbol{x}} = \boldsymbol{A}^T$$。
 
 **例2**：$$\boldsymbol{f} = \log\lvert\boldsymbol{X}\rvert$$，$$\boldsymbol{X}$$ 是 $$n\times n$$ 矩阵，求 $$\nabla_{\boldsymbol{X}} \boldsymbol{f}$$ 和 $$\nabla^2_{\boldsymbol{X}} \boldsymbol{f}$$。
 
 解：使用第一部分中的技术可求得 $$\nabla_{\boldsymbol{X}} \boldsymbol{f} = \boldsymbol{X}^{-1T}$$。为求 $$\nabla^2_{\boldsymbol{X}} \boldsymbol{f}$$，先求微分：$$\mathrm{d}\nabla_{\boldsymbol{X}} \boldsymbol{f} = -(\boldsymbol{X}^{-1}\mathrm{d}\boldsymbol{XX}^{-1})^T$$，再做向量化，使用转置和矩阵乘法的技巧
- $$\mathrm{boldsymbol}(\mathrm{d}\nabla_{\boldsymbol{X}} \boldsymbol{f})= -\boldsymbol{K}_{nn}\mathrm{boldsymbol}(\boldsymbol{X}^{-1}\mathrm{d}\boldsymbol{XX}^{-1}) = -\boldsymbol{K}_{nn}(\boldsymbol{X}^{-1T}\otimes \boldsymbol{X}^{-1})\mathrm{boldsymbol}(\mathrm{d}\boldsymbol{X})$$，对照导数与微分的联系，得到 $$\nabla^2_{\boldsymbol{X}} \boldsymbol{f} = -\boldsymbol{K}_{nn}(\boldsymbol{X}^{-1T}\otimes \boldsymbol{X}^{-1})$$，注意它是对称矩阵。在 $$\boldsymbol{X}$$ 是对称矩阵时，可简化为 $$\nabla^2_{\boldsymbol{X}} \boldsymbol{f} = -\boldsymbol{X}^{-1}\otimes \boldsymbol{X}^{-1}$$。
+ $$\mathrm{vec}(\mathrm{d}\nabla_{\boldsymbol{X}} \boldsymbol{f})= -\boldsymbol{K}_{nn}\mathrm{vec}(\boldsymbol{X}^{-1}\mathrm{d}\boldsymbol{XX}^{-1}) = -\boldsymbol{K}_{nn}(\boldsymbol{X}^{-1T}\otimes \boldsymbol{X}^{-1})\mathrm{vec}(\mathrm{d}\boldsymbol{X})$$，对照导数与微分的联系，得到 $$\nabla^2_{\boldsymbol{X}} \boldsymbol{f} = -\boldsymbol{K}_{nn}(\boldsymbol{X}^{-1T}\otimes \boldsymbol{X}^{-1})$$，注意它是对称矩阵。在 $$\boldsymbol{X}$$ 是对称矩阵时，可简化为 $$\nabla^2_{\boldsymbol{X}} \boldsymbol{f} = -\boldsymbol{X}^{-1}\otimes \boldsymbol{X}^{-1}$$。
 
 **例3**：$$\boldsymbol{F} = \boldsymbol{A}\exp(\boldsymbol{XB})$$，$$\boldsymbol{A}$$ 是 $$l\times m$$，$$\boldsymbol{X}$$ 是 $$m\times n$$，$$\boldsymbol{B}$$ 是 $$n\times p$$ 矩阵，$$\exp()$$ 为逐元素函数，求 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}}$$。
 
-解：先求微分：$$\mathrm{d}\boldsymbol{F} = \boldsymbol{A}(\exp(\boldsymbol{XB})\odot (\mathrm{d}\boldsymbol{XB}))$$，再做向量化，使用矩阵乘法的技巧：$$\mathrm{boldsymbol}(\mathrm{d}\boldsymbol{F}) = (\boldsymbol{I}_p\otimes \boldsymbol{A})\mathrm{boldsymbol}(\exp(\boldsymbol{XB})\odot (\mathrm{d}\boldsymbol{XB}))$$，再用逐元素乘法的技巧：$$\mathrm{boldsymbol}(\mathrm{d}\boldsymbol{F}) = (\boldsymbol{I}_p \otimes \boldsymbol{A}) \mathrm{diag}(\exp(\boldsymbol{XB}))\mathrm{boldsymbol}(\mathrm{d}\boldsymbol{XB})$$，再用矩阵乘法的技巧：$$\mathrm{boldsymbol}(\mathrm{d}\boldsymbol{F}) = (\boldsymbol{I}_p\otimes \boldsymbol{A})\mathrm{diag}(\exp(\boldsymbol{XB}))(\boldsymbol{B}^T\otimes I_m)\mathrm{boldsymbol}(\mathrm{d}\boldsymbol{X})$$，对照导数与微分的联系得到 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}} = (\boldsymbol{B}\otimes \boldsymbol{I}_m)\mathrm{diag}(\exp(\boldsymbol{XB}))(\boldsymbol{I}_p\otimes \boldsymbol{A}^T)$$。
+解：先求微分：$$\mathrm{d}\boldsymbol{F} = \boldsymbol{A}(\exp(\boldsymbol{XB})\odot (\mathrm{d}\boldsymbol{XB}))$$，再做向量化，使用矩阵乘法的技巧：$$\mathrm{vec}(\mathrm{d}\boldsymbol{F}) = (\boldsymbol{I}_p\otimes \boldsymbol{A})\mathrm{vec}(\exp(\boldsymbol{XB})\odot (\mathrm{d}\boldsymbol{XB}))$$，再用逐元素乘法的技巧：$$\mathrm{vec}(\mathrm{d}\boldsymbol{F}) = (\boldsymbol{I}_p \otimes \boldsymbol{A}) \mathrm{diag}(\exp(\boldsymbol{XB}))\mathrm{vec}(\mathrm{d}\boldsymbol{XB})$$，再用矩阵乘法的技巧：$$\mathrm{vec}(\mathrm{d}\boldsymbol{F}) = (\boldsymbol{I}_p\otimes \boldsymbol{A})\mathrm{diag}(\exp(\boldsymbol{XB}))(\boldsymbol{B}^T\otimes I_m)\mathrm{vec}(\mathrm{d}\boldsymbol{X})$$，对照导数与微分的联系得到 $$\frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}} = (\boldsymbol{B}\otimes \boldsymbol{I}_m)\mathrm{diag}(\exp(\boldsymbol{XB}))(\boldsymbol{I}_p\otimes \boldsymbol{A}^T)$$。
 
 **例4【一元 logistic 回归】**：$$l = -y \boldsymbol{x}^T \boldsymbol{w} + \log(1 + \exp(\boldsymbol{x}^T\boldsymbol{w}))$$，求 $$\nabla_{\boldsymbol{w}} l$$ 和 $$\nabla_{\boldsymbol{w}}^2 l$$。其中 $$y$$ 是取值 0 或 1 的标量，$$\boldsymbol{x}$$ 和 $$\boldsymbol{w}$$ 是向量。
 
@@ -190,7 +190,7 @@ $$
  $$\mathrm{softmax}'(\boldsymbol{a}) = \frac{\mathrm{diag}(\exp(\boldsymbol{a}))}{\boldsymbol{1}^T\exp(\boldsymbol{a})} - \frac{\exp(\boldsymbol{a})\exp(\boldsymbol{a})^T}{(\boldsymbol{1}^T\exp(\boldsymbol{a}))^2} $$，代入有 $$\mathrm{d}\nabla_{\boldsymbol{W}} l = \mathrm{softmax}'(\boldsymbol{a})\mathrm{d}\boldsymbol{a}\boldsymbol{x}^T = \mathrm{softmax}'(\boldsymbol{Wx})\mathrm{d}\boldsymbol{Wx}\boldsymbol{x}^T$$，做向量化并使用矩阵乘法的技巧，得到 $$\nabla_{\boldsymbol{W}}^2 l = (\boldsymbol{x}\boldsymbol{x}^T) \otimes \mathrm{softmax}'(\boldsymbol{Wx})$$。
 
 
-最后做个总结。我们发展了从整体出发的矩阵求导的技术，导数与微分的联系是计算的枢纽，标量对矩阵的导数与微分的联系是 $$\mathrm{d}f = \mathrm{tr}(\nabla_{\boldsymbol{X}}^T f \mathrm{d}\boldsymbol{X})$$，先对 $$f$$ 求微分，再使用迹技巧可求得导数，特别地，标量对向量的导数与微分的联系是 $$\mathrm{d}f = \nabla_{\boldsymbol{x}}f^T \mathrm{d}\boldsymbol{x}$$；矩阵对矩阵的导数与微分的联系是 $$\mathrm{boldsymbol}(\mathrm{d}\boldsymbol{F}) = \frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}}^T \mathrm{boldsymbol}(\mathrm{d}\boldsymbol{X})$$，先对 $$\boldsymbol{F}$$  求微分，再使用向量化的技巧可求得导数，特别地，向量对向量的导数与微分的联系是 $$\mathrm{d}\boldsymbol{f} = \frac{\partial \boldsymbol{f}}{\partial \boldsymbol{x}}^T\mathrm{d}\boldsymbol{x}$$。
+最后做个总结。我们发展了从整体出发的矩阵求导的技术，导数与微分的联系是计算的枢纽，标量对矩阵的导数与微分的联系是 $$\mathrm{d}f = \mathrm{tr}(\nabla_{\boldsymbol{X}}^T f \mathrm{d}\boldsymbol{X})$$，先对 $$f$$ 求微分，再使用迹技巧可求得导数，特别地，标量对向量的导数与微分的联系是 $$\mathrm{d}f = \nabla_{\boldsymbol{x}}f^T \mathrm{d}\boldsymbol{x}$$；矩阵对矩阵的导数与微分的联系是 $$\mathrm{vec}(\mathrm{d}\boldsymbol{F}) = \frac{\partial \boldsymbol{F}}{\partial \boldsymbol{X}}^T \mathrm{vec}(\mathrm{d}\boldsymbol{X})$$，先对 $$\boldsymbol{F}$$  求微分，再使用向量化的技巧可求得导数，特别地，向量对向量的导数与微分的联系是 $$\mathrm{d}\boldsymbol{f} = \frac{\partial \boldsymbol{f}}{\partial \boldsymbol{x}}^T\mathrm{d}\boldsymbol{x}$$。
 
 ## 3 反向传播算法的完整向量形式推导
 
